--- a/_posts/2024-12-16-reinvent.md
+++ b/_posts/2024-12-16-reinvent.md
@@ -20,5 +20,5 @@ This year I finally got the chance to attend AWS re:invent in person, and I have
     1. S3 Metadata provides queryable metadata for S3 objects using Iceberg on S3 Tables.
     1. AWS Firehose can now replicate data from Aurora source to Iceberg and supports schema evolution.
     1. AWS Glue now supports zero-ETL into Iceberg from sources like DynamoDB and Salesforce.
-1. I did not spent much time on AI features during this re:invent, but the one I found most interesting is Amazon Bedrock Guardrails, because it uses automated reasoning to help prevent hallucinations from GenAI.
+1. I did not spend much time on AI features during this re:invent, but the one I found most interesting is Amazon Bedrock Guardrails, because it uses automated reasoning to help prevent hallucinations from GenAI.
 
