--- a/_posts/2025-02-02-catalog.md
+++ b/_posts/2025-02-02-catalog.md
@@ -15,6 +15,6 @@ The key data in the catalog is a pointer to the latest Iceberg metadata file.
 ![Iceberg Catalog](/assets/iceberg_catalog.png "Iceberg Catalog")
 
 
-Iceberg supports arbitrary catalog backend that implements the Catalog [interface](https://github.com/apache/iceberg/blob/main/api/src/main/java/org/apache/iceberg/catalog/Catalog.java) such as Rest Catalog, Glue Catalog or even S3-tables-catalog. There is also an [OpenAPI](https://github.com/apache/iceberg/blob/main/open-api/rest-catalog-open-api.yaml) spec for the rest catalog. 
+Iceberg supports arbitrary catalog backend that implements the Catalog [interface](https://github.com/apache/iceberg/blob/main/api/src/main/java/org/apache/iceberg/catalog/Catalog.java) such as Rest Catalog, Glue Catalog or even [S3-tables-catalog](https://github.com/awslabs/s3-tables-catalog). There is also an [OpenAPI](https://github.com/apache/iceberg/blob/main/open-api/rest-catalog-open-api.yaml) spec for the REST catalog. 
 
 An advantage of iceberg is that it's possible to migrate the catalog metadata without touching the actual iceberg data. Project Nessie provided a [migration tool](https://github.com/projectnessie/iceberg-catalog-migrator) for doing just that.
