--- a/_posts/2025-02-02-catalog.md
+++ b/_posts/2025-02-02-catalog.md
@@ -12,7 +12,7 @@ Iceberg is a data lake table format that is getting mainstream adoption. Iceberg
 
 The key data in the catalog is a pointer to the latest Iceberg metadata file.
 
-![Iceberg Catalog](/assets/iceberg_catalog.png "Iceberg Catalog")
+![Iceberg Catalog](/assets/catalog.jpg "Iceberg Catalog")
 
 
 Iceberg supports arbitrary catalog backend that implements the Catalog [interface](https://github.com/apache/iceberg/blob/main/api/src/main/java/org/apache/iceberg/catalog/Catalog.java) such as Rest Catalog, Glue Catalog or even [S3-tables-catalog](https://github.com/awslabs/s3-tables-catalog). There is also an [OpenAPI](https://github.com/apache/iceberg/blob/main/open-api/rest-catalog-open-api.yaml) spec for the REST catalog. 
